F&GDEV/src/objects/Policy_Print_Package__c.object
<CustomObject>
    <fields>
        <fullName>Package_Link__c</fullName>
        <label>Package Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProductState__c</fullName>
        <label>Product State</label>
        <referenceTo>State_Availability__c</referenceTo>
        <relationshipLabel>Policy Print Packages</relationshipLabel>
        <relationshipName>Policy_Print_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Production_End__c</fullName>
        <label>Production End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Start__c</fullName>
        <label>Production Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Print_Received__c</fullName>
        <label>Test Print Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Print_Signoff__c</fullName>
        <label>Test Print Signoff</label>
        <type>Date</type>
    </fields>
    <label>Policy Print Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProductState__c</columns>
        <columns>Package_Link__c</columns>
        <columns>Production_Start__c</columns>
        <columns>Production_End__c</columns>
        <columns>Test_Print_Received__c</columns>
        <columns>Test_Print_Signoff__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>performaneprotest</fullName>
        <columns>ProductState__c</columns>
        <columns>Package_Link__c</columns>
        <columns>Production_Start__c</columns>
        <columns>Production_End__c</columns>
        <columns>Test_Print_Received__c</columns>
        <columns>Test_Print_Signoff__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductState__c</field>
            <operation>contains</operation>
            <value>performance pro test</value>
        </filters>
        <label>performane pro test</label>
    </listViews>
    <nameField>
        <displayFormat>PPP-{000000}</displayFormat>
        <label>Policy Print Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Print Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>